--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </a>
     
       <a href="javascript:void(0)" class="scene" data-id="1-recepcin">
-        <li class="text">Recepción</li>
+        <li class="text">Recepción de Oficina</li>
       </a>
     
       <a href="javascript:void(0)" class="scene" data-id="2-ambiente1">
